--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,9 @@ src/main/resources/docs/
 *.iml
 bin/
 
+# Task data
+/data
+
+# Test files
 /text-ui-test/ACTUAL.TXT
 text-ui-test/EXPECTED-UNIX.TXT
